crm/crm-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: crm-svc
spec:
  selector:
    app: crm-deploy
  ports:
    - port: 80
      targetPort: 3403
  type: LoadBalancer
