crm/crm-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crm-ingress
spec:
  rules:
  - host: crm.rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: crm-svc
            port:
              number: 80
